# strands-foodie-agents

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_analysis_report.md  sample_langfuse_analysis_report.md
docs/: a2a_communication_patterns.md  mcp_tool_integration.md  strands_framework_usage.md
foodie_agents/: __init__.py  config.py  langfuse_integration.py  llm_client.py  prompts.py  reasoning_analyzer.py  run_foodie.py  strands_agents.py  tools.py  types.py
foodie_agents/data/: __init__.py  chicago_venues.json
foodie_agents/interop/: __init__.py  budget_agent.py  client.py
init-scripts/: 01-init.sql
