[project]
name = "foodie-agents"
version = "0.1.0"
description = "AI-powered food recommendation and restaurant discovery agents using Strands framework"
authors = [
    {name = "Foodie Agents Team", email = "team@foodie-agents.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "strands-agents[otel]>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "langfuse>=2.0.0",
    "opentelemetry-instrumentation-requests>=0.44b0",
    "opentelemetry-instrumentation-urllib3>=0.44b0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.black]
target-version = ['py311']
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
